syntax = "proto3";

import "util/tracing/proto/tracing.proto";

option go_package = "sigmaos/ft/lease/proto";

message AskReq {
  uint64 ClntId = 1;
  uint64 tTL = 2;
  SpanContextConfig spanContextConfig = 3;
}

message AskRep {
  uint64 LeaseId = 1;
}

message ExtendReq {
  uint64 LeaseId = 1;
}

message ExtendRep {
}

message EndReq {
  uint64 LeaseId = 1;
}

message EndRep {
}
