syntax = "proto3";

option go_package = "sigmaos/namesrv/fsetcd";

message EtcdFileProto {
        bytes   data = 1;
}

message EtcdDirEntProto {
        string name = 1;
        uint64 path = 2;
        uint32 perm = 3;
        int64 leaseId = 4;
        uint64  clientId = 5;
}       

message EtcdDirProto {
        repeated EtcdDirEntProto ents = 3;
}

